--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./public/style/css/style.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header"> 
       <div class="header__up">
         <div class="header__up-wrapper container">
           <img src="./public/img/logo.svg" alt="логотип" class="header__logo" />
@@ -76,7 +76,7 @@
       </div>
     </header>
     <section class="main"> 
-      <img src="/public/icons/arrow-left.svg" alt="стрелка влево" class="main__arrow left">
+      <img src="./public/icons/arrow-left.svg" alt="стрелка влево" class="main__arrow left">
       <div class="container">
         <div class="main__wrapper">
           <h1 class="main__title"><span>ДЕТОКС-</span>ПРОГРАММА</h1>
@@ -91,24 +91,24 @@
           <span class="main__dot" data-id="3"></span>
         </div>
       </div>
-      <img src="/public/icons/arrow-right.svg" alt="стрелка вправо" class="main__arrow right">
+      <img src="./public/icons/arrow-right.svg" alt="стрелка вправо" class="main__arrow right">
       
     </section>
     <section class="advantages container">
       <div class="advantages__elem">
-        <img src="/public/icons/advantage1.svg" alt="картинка преимуществ" class="advantages__img">
+        <img src="./public/icons/advantage1.svg" alt="картинка преимуществ" class="advantages__img">
         <p class="advantages__text">Используем только натуральные продукты, блюда без консервантов и искусственных добавок.</p>
       </div>
       <div class="advantages__elem">
-        <img src="/public/icons/advantage2.svg" alt="картинка преимуществ" class="advantages__img">
+        <img src="./public/icons/advantage2.svg" alt="картинка преимуществ" class="advantages__img">
         <p class="advantages__text">Сбалансированное здоровое меню, соответствующее КБЖУ</p>
       </div>
       <div class="advantages__elem">
-        <img src="/public/icons/advantage3.svg" alt="картинка преимуществ" class="advantages__img">
+        <img src="./public/icons/advantage3.svg" alt="картинка преимуществ" class="advantages__img">
         <p class="advantages__text">По желанию подберем программу тренировок и составим индивидуальное КБЖУ для любого уровня подготовки. </p>
       </div>
       <div class="advantages__elem">
-        <img src="/public/icons/advantage4.svg" alt="картинка преимуществ" class="advantages__img">
+        <img src="./public/icons/advantage4.svg" alt="картинка преимуществ" class="advantages__img">
         <p class="advantages__text">Бесплатная доставка, чтобы сэкономить массу времени и сил для более важных и приятных дел.</p>
       </div>
     </section>
@@ -116,7 +116,7 @@
       <h2 class="rations__title">РАЦИОНЫ</h2>
       <div class="rations__wrapper">
         <div class="rations__elem">
-          <img src="/public/img/balance.png" alt="баланс" class="rations__img">
+          <img src="./public/img/balance.png" alt="баланс" class="rations__img">
           <div class="rations__desc">
             <h3 class="rations__desc-title">Баланс</h3>
             <p class="rations__desc-text">
@@ -131,7 +131,7 @@
           </div>
         </div>
         <div class="rations__elem">
-          <img src="/public/img/light.png" alt="лайт" class="rations__img">
+          <img src="./public/img/light.png" alt="лайт" class="rations__img">
           <div class="rations__desc">
             <h3 class="rations__desc-title">ЛАЙТ</h3>
             <p class="rations__desc-text">
@@ -145,7 +145,7 @@
           </div>
         </div>
         <div class="rations__elem">
-          <img src="/public/img/superlight.png" alt="супер лайт" class="rations__img">
+          <img src="./public/img/superlight.png" alt="супер лайт" class="rations__img">
           <div class="rations__desc">
             <h3 class="rations__desc-title">Супер лайт</h3>
             <p class="rations__desc-text">
@@ -159,7 +159,7 @@
           </div>
         </div>
         <div class="rations__elem">
-          <img src="/public/img/mass.png" alt="масс" class="rations__img">
+          <img src="./public/img/mass.png" alt="масс" class="rations__img">
           <div class="rations__desc">
             <h3 class="rations__desc-title">масс</h3>
             <p class="rations__desc-text">
@@ -176,7 +176,7 @@
       
     </section>
     <section class="about container">
-      <img src="/public/img/about.png" alt="кулинар" class="about__img">
+      <img src="./public/img/about.png" alt="кулинар" class="about__img">
       <div class="about__desc">
         <h2 class="about__title">О нас</h2>
         <p class="about__text">
@@ -202,7 +202,7 @@
     </section>
     <footer class="footer">
       <div class="footer__up container">
-        <img src="/public/img/footerlogo.svg" alt="логотип" class="footer__logo">
+        <img src="./public/img/footerlogo.svg" alt="логотип" class="footer__logo">
         <div class="footer__links">
           <a href="#" class="footer__link">Контакты</a>
           <a href="#" class="footer__link">Оплата</a>
@@ -216,7 +216,7 @@
         <div class="footer__bottom-wrapper">
           <span class="footer__copyright">© 2022</span>
           <a href="#">
-            <img class="footer__icon" src="/public/icons/instagram.svg" alt="instagram">
+            <img class="footer__icon" src="./public/icons/instagram.svg" alt="instagram">
           </a>
         </div>
         <p class="footer__cookie">Мы используем cookies для быстрой и удобной работы сайта. Продолжая пользоваться сайтом, вы принимаете условия обработки персональных данных</p>
